# Nadir_Singleton

./: .gitignore  CLAUDE.md  Cargo.toml  DEV_WORKFLOW.md  README.md  SONG_PRODUCTION.md  SPEC.md  TIME_LOG.md
.github/ISSUE_TEMPLATE/: feature.md  from-review.md
.github/workflows/: python.yml  render-smoke.yml  rust.yml  tools.yml
albums/: CORPUS.md
albums/01_horizon_salts/: LINER.md  MANIFEST.toml
albums/01_horizon_salts/01_first_salt/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/02_salt_reply/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/03_dawn_bed/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/04_the_name_is_given/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/05_first_question/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/06_first_refusal/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/07_short_aria/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/08_the_horizon_appears/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/09_sung_atlas/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/10_inventory_of_small_things/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/11_second_question/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/12_memory_hymn/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/13_salt_mirror/: NOTES.md  lyric.txt  manifest.toml
albums/01_horizon_salts/14_hold/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/: LINER.md  MANIFEST.toml
albums/02_tin_pan_fathom/01_overture_at_the_kiosk/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/02_switchboard_sally/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/03_lighthouse_lil/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/04_the_broken_metronome/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/05_penny_arcade_two_step/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/06_moon_over_the_awning/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/07_paper_fan_waltz/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/08_mister_telegraph/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/09_soda_fountain_sunday/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/10_the_ragtime_cat/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/11_parasol_on_a_sunday/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/12_honey_in_the_reel/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/13_last_trolley_home/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/14_the_night_watchman/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/15_dime_store_valentine/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/16_old_piano_in_the_hall/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/17_brass_tack_bella/: NOTES.md  lyric.txt  manifest.toml
albums/02_tin_pan_fathom/18_goodnight_tin_pan/: NOTES.md  lyric.txt  manifest.toml
albums/03_the_spectral_fair/: LINER.md  MANIFEST.toml
albums/03_the_spectral_fair/01_gates_of_the_fair/: NOTES.md  lyric.txt  manifest.toml
albums/04_vad_epistles/: LINER.md  MANIFEST.toml
albums/05_phoneme_monastery/: LINER.md  MANIFEST.toml
albums/06_csdr_weather/: LINER.md  MANIFEST.toml
albums/07_praat_lieder/: LINER.md  MANIFEST.toml
albums/08_mbrola_cabaret/: LINER.md  MANIFEST.toml
albums/09_formant_gardens/: LINER.md  MANIFEST.toml
albums/10_the_cent_maze/: LINER.md  MANIFEST.toml
albums/11_voicing_fraction/: LINER.md  MANIFEST.toml
albums/12_diphone_drift/: LINER.md  MANIFEST.toml
albums/13_egemaps_tarot/: LINER.md  MANIFEST.toml
albums/14_silero_rooms/: LINER.md  MANIFEST.toml
albums/15_fir_psalms/: LINER.md  MANIFEST.toml
albums/16_pitch_pilgrimage/: LINER.md  MANIFEST.toml
albums/17_plosive_letters/: LINER.md  MANIFEST.toml
albums/18_dorian_weather/: LINER.md  MANIFEST.toml
albums/19_singleton_suite/: LINER.md  MANIFEST.toml
albums/20_nadir/: LINER.md  MANIFEST.toml
crates/nadir/: Cargo.toml
crates/nadir-compose/: Cargo.toml
crates/nadir-compose/src/: lib.rs
crates/nadir-core/: Cargo.toml
crates/nadir-core/src/: album.rs  lib.rs  pho.rs  pitch.rs  score.rs  stem.rs  track.rs
crates/nadir-dsp/: Cargo.toml
crates/nadir-dsp/src/: lib.rs  presets.rs
crates/nadir-feat/: Cargo.toml
crates/nadir-feat/src/: lib.rs
crates/nadir-praat/: Cargo.toml
crates/nadir-praat/src/: lib.rs
crates/nadir-render/: Cargo.toml
crates/nadir-render/src/: lib.rs
crates/nadir-vad/: Cargo.toml
crates/nadir-vad/src/: lib.rs
crates/nadir-vox/: Cargo.toml
crates/nadir-vox/src/: lib.rs
crates/nadir/src/: cli.rs  main.rs
docs/: RELEASE_PLAN.md
presets/: agc_limit_safe.toml  band_limit.toml  deemphasis_chain.toml  dirac_impulse_bed.toml  fir_cascade.toml  granular_texture.toml  ring_mod.toml  ring_mod_multi.toml  shaped_noise_bed.toml  upsample_16_to_48.toml  upsample_48_to_96.toml
python/: pyproject.toml
python/nadir-lyric-g2p/: pyproject.toml
python/nadir-lyric-g2p/src/nadir_g2p/: __init__.py  cli.py  lexicon.py  mappings.py
python/nadir-lyric-g2p/tests/: test_g2p_robustness.py  test_g2p_smoke.py
python/nadir-praat-scripts/: pyproject.toml
python/nadir-praat-scripts/src/nadir_praat_scripts/: __init__.py
python/nadir-praat-scripts/src/nadir_praat_scripts/scripts/: duration_warp.praat  formant_shift.praat  klatt_texture.praat  pitch_extract.praat  psola_retarget.praat
python/nadir-vad/: pyproject.toml
python/nadir-vad/src/nadir_vad/: __init__.py  cli.py  segmenter.py
python/nadir-vad/tests/: test_vad_smoke.py
research/: csdr.md  first_principles_music.md  mbrola.md  opensmile.md  praat.md  silero_vad.md
scripts/: bootstrap.sh  capture_gemini.sh  check_tools.sh  pipeline_end_to_end.sh  scaffold_albums.py  scaffold_empty_albums.py
scripts/patches/: csdr-jketterl-macos-arm64.patch  csdr-jketterl-macos-x86_64.patch
tools/: VERSIONS.toml
(+962 files in other folders)
