[package]
name = "nadir-praat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Praat script generator + runner."

[dependencies]
nadir-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
fs-err.workspace = true
tempfile.workspace = true
