[project]
name = "nadir-lyric-g2p"
version = "0.1.0"
description = "Grapheme-to-phoneme for Nadir_Singleton MBROLA voices: CMUdict → ARPAbet → SAMPA."
requires-python = ">=3.11"
authors = [{ name = "Nadir_Singleton" }]
license = { text = "MIT" }
dependencies = [
    "cmudict>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nadir_g2p"]

[project.scripts]
nadir-g2p = "nadir_g2p.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
