[project]
name = "nadir-praat-scripts"
version = "0.1.0"
description = "Curated library of .praat scripts for the Nadir_Singleton pipeline."
requires-python = ">=3.11"
authors = [{ name = "Nadir_Singleton" }]
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nadir_praat_scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
