[project]
name = "nadir-vad"
version = "0.1.0"
description = "Silero-VAD driver for Nadir_Singleton: segmentation, onset grid, rhythmic trigger extraction."
requires-python = ">=3.11"
authors = [{ name = "Nadir_Singleton" }]
license = { text = "MIT" }
dependencies = [
    "silero-vad>=5.1",
    "numpy>=1.26",
    "soundfile>=0.12",
    "torch>=2.6",
    "torchaudio>=2.6",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nadir_vad"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[project.scripts]
nadir-vad = "nadir_vad.cli:main"
